--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -32,9 +32,9 @@
               class="btn btn-success"
               type="submit"
               [disabled]="!f.valid">{{ editMode ? 'Update' : 'Add' }}</button>
-            <button
+            <button *ngIf="editMode"
               class="btn btn-danger"
-              type="button"
+              type="button" (click)="onDelete()"
               >Delete</button>
             <button class="btn btn-primary" type="button" (click)="onClear()" >Clear</button>
           </div>
