--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,16 +1,16 @@
 <div class="row">
     <div class="col-sx-12 col-md-6 col-md-6-offset-3">
-        <form>
+        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
             <div class="form-group">
                 <label for="email">E-Mail</label>
-                <input type="emai" id="emai" class="form-control">
+                <input type="emai" id="emai" class="form-control" ngModel name="email" required email >
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
-                <input type="password" id="password" class="form-control">
+                <input type="password" id="password" class="form-control" ngModel name="password" required minlength="6">
             </div>
             <div>
-                <button class="btn btn-primary" type="submit">{{ isLoginMode ? 'Login' : 'Sign up' }}</button>
+                <button class="btn btn-primary" type="submit" [disabled]="!authForm.valid" >{{ isLoginMode ? 'Login' : 'Sign up' }}</button>
             </div>
             <div>
                 <button class="btn btn-primary" (click)="onSwitchMode()" type="button">Switch to {{ isLoginMode ? 'Sign up' : 'Login' }}</button>
