--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,6 +1,12 @@
 <div class="row">
     <div class="col-sx-12 col-md-6 col-md-6-offset-3">
-        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
+        <div class="alert alert-danger" *ngIf="error">
+            <p>{{ error }}</p>
+        </div>
+        <div *ngIf="isLoading">
+           <app-loading-spinner></app-loading-spinner> 
+        </div>
+        <form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)" *ngIf="!isLoading">
             <div class="form-group">
                 <label for="email">E-Mail</label>
                 <input type="emai" id="emai" class="form-control" ngModel name="email" required email >
