--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,9 +1,11 @@
+
 <div class="row">
     <div class="col-sx-12 col-md-6 col-md-6-offset-3">
         <!-- <div class="alert alert-danger" *ngIf="error">
             <p>{{ error }}</p>
         </div> -->
-        <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert>
+        <!-- <app-alert [message]="error" *ngIf="error" (close)="onHandleError()"></app-alert> -->
+        <ng-template appPlaceholder></ng-template>
         <div *ngIf="isLoading">
            <app-loading-spinner></app-loading-spinner> 
         </div>
